--- a/Pipfile
+++ b/Pipfile
@@ -6,10 +6,12 @@ name = "pypi"
 [packages]
 dash = "*"
 plotly = "*"
-scikit-learn = "*"
+scikit-learn = "==0.23.2"
 gunicorn = "*"
 dash-bootstrap-components = "*"
 pandas = "*"
+xgboost = "*"
+category-encoders = "*"
 
 [dev-packages]
 
